--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "nodemon start",
+    "test": "nodemon server.js",
     "start": "nodemon server.js"
   },
   "keywords": [],
