--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.3",
     "nodemon": "^3.1.10",
     "openai": "^5.8.3",
+    "razorpay": "^2.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
